# screen_time

./: .gitignore  Cargo.toml  biome.json  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  lib.rs  main.rs  main.tsx  models.rs  routeTree.gen.ts  sampler.rs  sql_layer.rs  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  sampler.rs  sql_layer.rs
src-tauri/src/sql_client/: init.rs  mod.rs  reader.rs  writer.rs
src-tauri/src/tauri_app/: commands.rs  dtos.rs  mod.rs
src/components/: AppHeader.tsx
src/components/AppHeader/: AppHeader.tsx
src/components/AppHeader/components/: Headertitle.tsx  MobileDrawer.tsx  NavItems.ts  NavLinks.tsx  SearchBar.tsx
src/components/UI/: DashboardCard.tsx  InfoTooltip.tsx  PageHeader.tsx  SimpleDataCard.tsx  TitledCard.tsx
src/hooks/: useDebouncedValue.tsx
src/lib/: durationFormatHelpers.ts  durationHelpers.ts  epochDayHelpers.ts
src/queries/: getApplications.ts  getTopUsage.ts  getUsage.ts  getUsageFragmentation.ts  getUsageSummary.ts  getWeeksDailyUsage.ts  searchApplications.ts
src/routes/: __root.tsx  index.css  index.tsx
src/routes/-components/: DashboardSummary.tsx  TopExesChart.tsx  UsageFragmentationChart.tsx  WeeklyUsageChart.tsx
src/routes/_components/: DashboardHeader.tsx  DashboardSummary.tsx  TopExesChart.tsx  UsageFragmentationChart.tsx  WeeklyUsageChart.tsx
src/routes/applications/: index.tsx
src/routes/applications/$exe/: index.tsx
src/types/: dto.ts
(+7 files in other folders)
